[gd_scene load_steps=8 format=3 uid="uid://cahide3iwkccm"]

[ext_resource type="AudioStream" uid="uid://tjc62n2t3jpd" path="res://assets/sounds/Simplicity.mp3" id="1_776yn"]
[ext_resource type="Script" uid="uid://bggfws7q4jxvv" path="res://scripts/global_sfx.gd" id="1_lgu8u"]
[ext_resource type="AudioStream" uid="uid://rdxxxrfbw2ik" path="res://assets/sounds/ui-click-43196.mp3" id="3_5osk8"]
[ext_resource type="AudioStream" uid="uid://dgw1ddadtl014" path="res://assets/sounds/mixkit-forest-birds-ambience-1210.wav" id="4_uxr5k"]
[ext_resource type="AudioStream" uid="uid://bo8l2k6w55b22" path="res://assets/sounds/night-ambience-17064.mp3" id="5_x4g66"]
[ext_resource type="AudioStream" uid="uid://33o0djifsvwy" path="res://assets/sounds/glow.mp3" id="6_0l4wi"]
[ext_resource type="AudioStream" uid="uid://bnokkdt6pbx54" path="res://assets/sounds/item-pickup-37089.mp3" id="6_x4g66"]

[node name="GlobalSfx" type="Node"]
script = ExtResource("1_lgu8u")

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_776yn")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5osk8")
volume_db = -5.0

[node name="MorningMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uxr5k")

[node name="EveningMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x4g66")

[node name="SwitchSound" type="AudioStreamPlayer" parent="."]

[node name="SpeechMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0l4wi")

[node name="PickupMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_x4g66")
volume_db = -10.0
